src/opt/tests/snapshots/unroll__into_linear_scope.snap
---
created: "2019-04-29T02:16:31.442217700Z"
creator: insta@0.7.4
source: src/opt/tests/unroll.rs
expression: "\n    let something = {};\n    if (g) {\n        for (var x in something) {\n            log(x);\n        }\n    }\n"
---
_ini = <void>
x <= _ini
<dead> = {  }
_iff = <global g>
<if> _iff:
    <empty>
<else>:
    <empty>
